--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,11 @@
 exportPattern("^[[:alpha:]]+")
-import("ggplot2","dplyr","MURP","JuliaCall","ggraph")
-importFrom("stats", "aov", "cor", "loess", "prcomp", "sd", "t.test", "wilcox.test","dnorm", "qnorm", "rnorm","quantile","cor.test", "lm", "p.adjust")
+import("ggplot2","dplyr","MURP","JuliaCall","ggraph","optimParallel")
+importFrom("stats", "aov", "cor", "loess", "prcomp", "sd", "t.test", "wilcox.test","dnorm", "qnorm", "rnorm","quantile","cor.test", "lm", "p.adjust","setNames")
 importFrom("grDevices", "dev.off", "pdf", "colorRampPalette", "cairo_pdf")
 importFrom("graphics", "strwidth")
 importFrom("methods", "as", "new")
-importFrom("utils", "tail", "write.table","combn","write.csv")
-importFrom("ggsci", "scale_color_d3", "scale_colour_d3","scale_fill_d3", "scale_color_simpsons","scale_colour_simpsons","scale_fill_simpsons","pal_d3","pal_rickandmorty")
+importFrom("utils", "tail", "write.table","combn","write.csv","setTxtProgressBar", "txtProgressBar")
+importFrom("ggsci", "scale_color_d3", "scale_colour_d3","scale_fill_d3", "scale_color_simpsons","scale_colour_simpsons","scale_fill_simpsons","pal_d3","pal_rickandmorty","scale_colour_material","scale_color_material")
 importFrom("stringr", "str_split_fixed","str_sub")
 importFrom("ComplexHeatmap", "Heatmap","draw")
 importFrom("purrr", "map_df")
@@ -15,12 +15,11 @@ importFrom("patchwork", "wrap_plots","plot_layout")
 importFrom("Rtsne", "Rtsne")
 importFrom("umap", "umap")
 importFrom("cluster", "pam")
-importFrom("igraph","graph.adjacency", "degree", "graph_from_adjacency_matrix","get.edgelist","layout_as_tree","graph_from_data_frame","as_adjacency_matrix","minimum.spanning.tree")
+importFrom("igraph","graph.adjacency", "degree", "subgraph", "V", "V<-", "graph_from_adjacency_matrix","get.edgelist","layout_as_tree","graph_from_data_frame","as_adjacency_matrix","minimum.spanning.tree")
 importFrom("graphlayouts","layout_as_backbone")
 importFrom("tibble", "rownames_to_column")
 importFrom("parallelDist", "parDist")
 importFrom("Matrix", "bdiag")
-importFrom("optimParallel", "optimParallel")
 importFrom("mvtnorm", "dmvnorm")
 importFrom("rotations", "as.SO3")
 importFrom("invgamma", "dinvgamma")
@@ -29,3 +28,4 @@ importFrom("Rmisc", "summarySE")
 importFrom("MASS", "mvrnorm")
 importFrom("corpcor", "make.positive.definite", "is.positive.definite")
 importFrom("ggpubr", "stat_compare_means")
+importFrom("ggimage","geom_subview")
