--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom("MASS", "mvrnorm")
 importFrom("corpcor", "make.positive.definite", "is.positive.definite")
 importFrom("ggpubr", "stat_compare_means")
 importFrom("ggimage","geom_subview")
+importFrom("latex2exp","TeX")
