--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,3 +30,4 @@ importFrom("corpcor", "make.positive.definite", "is.positive.definite")
 importFrom("ggpubr", "stat_compare_means")
 importFrom("ggimage","geom_subview")
 importFrom("latex2exp","TeX")
+importFrom("ggsignif","geom_signif")
