--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,4 @@ importFrom("ggpubr", "stat_compare_means")
 importFrom("ggimage","geom_subview")
 importFrom("latex2exp","TeX")
 importFrom("ggsignif","geom_signif")
+importFrom("ggplotify","as.grob", "as.ggplot")
